syntax = "proto3";
package freym.auth.management;
import "auth/management/shared.proto";

message UpsertRoleRequest {
	string tenant_id = 1;
	string id = 2;
	repeated RoleScope allowed_scopes = 3;
	EventMetadata event_metadata = 4;
}

message UpsertRoleResponse {
	string id = 1;
}
