syntax = "proto3";
package freym.auth.management;
import "auth/management/deployment.proto";
import "auth/management/role_upsert.proto";
import "auth/management/role_delete.proto";
import "auth/management/roles_get.proto";
import "auth/management/user_create.proto";
import "auth/management/user_update.proto";
import "auth/management/user_delete.proto";
import "auth/management/users_get.proto";  
  
service Service {
	rpc DeploySchema(DeploySchemaRequest) returns (DeploySchemaResponse);
	rpc ActivateSchema(ActivateSchemaRequest) returns (ActivateSchemaResponse);
	rpc ConfirmSchema(ConfirmSchemaRequest) returns (ConfirmSchemaResponse);
	rpc RollbackSchema(RollbackSchemaRequest) returns (RollbackSchemaResponse);
	rpc GetSchemaDeployment(GetSchemaDeploymentRequest) returns (GetSchemaDeploymentResponse);

	rpc UpsertRole(UpsertRoleRequest) returns (UpsertRoleResponse); 
	rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
	rpc GetRoles(GetRolesRequest) returns (GetRolesResponse);

	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
	rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}
